--- a/css/style.css
+++ b/css/style.css
@@ -15,5 +15,29 @@
     font-style: normal;
 }
 
-
 /* navbar end */
+
+/* --------------------------------------------------------------------- */
+
+/* slider start */
+.carousel-item::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #000;
+    opacity: 0.7;
+}
+
+.carousel-caption h5 {
+    font-size: 1rem;
+}
+
+.carousel-caption p {
+    font-size: 0.5rem;
+}
+
+/* slider end */
