--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    color: #777777;
+    margin: 0%;
+}
+
+h5 {
+    font-weight: 700;
+    font-size: 1rem;
+    margin: 0%;
+}
+
 /* navbar */
 .register-btn {
     color: #289BDE;
@@ -37,7 +53,16 @@
 }
 
 .carousel-caption p {
+    color: white;
     font-size: 0.5rem;
 }
 
 /* slider end */
+
+/* --------------------------------------------------------------------- */
+
+/* popular courses */
+.Popular-Courses-text {
+    max-width: 430px;
+    margin: auto;
+}
